<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AloLine</string>
    <string name="title_chat">Chat</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="common_loading">Đang tải&#8230;</string>
    <string name="common_network_error">Mạng hiện tại không khả dụng, vui lòng kiểm tra cài đặt mạng</string>
    <string name="home_exit_hint">Bấm lần nữa để thoát ứng dụng</string>
    <string name="registry_advertisement_success">Đăng ký quảng cáo\nthành công</string>
    <string name="manager_advertisement">Quản lý quảng cáo</string>
    <string name="loading_advertisement">Đang chờ duyệt</string>
    <string name="reservation_information" translatable="false">Thông tin Booking</string>
    <string name="order_review" translatable="false">Đánh giá đơn hàng</string>
    <string name="notification" translatable="false">Thông báo</string>
    <string name="privacy_policy" translatable="false">Chính sách bảo mật</string>
    <string name="app_reviews" translatable="false">Đánh giá ứng dụng</string>
    <string name="support" translatable="false">Trợ giúp</string>
    <string name="suggestions_for_developers" translatable="false">Góp ý cho nhà phát triển</string>
    <string name="delete_post" translatable="false">Xoá bài đăng</string>
    <string name="title_delete_post" translatable="false">Bài đăng này sẽ ẩn khỏi Nhật ký</string>
    <string name="title_audio" translatable="false">Nhấn và giữ để ghi âm</string>
    <string name="title_recording" translatable="false">Thả ra để gửi, di chuyển sang trái để xóa</string>
    <string name="setting_notification">Cài đặt thông báo</string>
    <string name="setting_advertisement">Cài đặt quảng cáo</string>
    <string name="setting_account">Cài đặt tài khoản</string>
    <string name="setting_user">Cài đặt cá nhân</string>
    <string name="title_browse_policy">Chọn trưởng nhóm mới</string>
    <string name="setting_member_brows_member">Duyệt thành viên</string>
    <string name="setting_chat">Cài đặt nhóm</string>
    <string name="setting_login">Cài đặt đăng nhập</string>
    <string name="nation">Quốc Gia</string>
    <string name="earth">Ngôn Ngữ</string>
    <string name="forgot_password">Đổi mật khẩu</string>
    <string name="application_information">Thông tin ứng dụng</string>
    <string name="logout">Đăng xuất</string>
    <string name="notice_from_the_restaurant">Thông báo từ Nhà hàng</string>
    <string name="only_chat_with_friends">Chỉ trò chuyện với bạn bè</string>
    <string name="friend_request">Lời mời kết bạn</string>
    <string name="notifications_from_chat">Thông báo từ Trò chuyện</string>
    <string name="new_diary_from_your_friend">Nhật ký mới từ bạn của bạn</string>
    <string name="interact_with_your_tabbed_logs">Tương tác với nhật ký gắn tab đến bạn</string>
    <string name="interact_with_your_diary">Tương tác với nhật ký từ bạn</string>
    <string name="notice_from_the_diary">Thông báo từ Nhật ký</string>
    <string name="introduce">Giới thiệu</string>
    <string name="library">Thư viện</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="detail">Chi tiết</string>
    <string name="text_all">Tất cả</string>
    <string name="tvMyFriend">Bạn bè</string>
    <string name="tvWork">Hoạt động</string>
    <string name="my_beer_warehouse">Kho BEER của tôi</string>
    <string name="my_restaurant">Nhà hàng của tôi</string>
    <string name="address_restaurant">Địa chỉ / Các chi nhánh</string>
    <string name="title_album">Thư viện</string>
    <string name="title_menu">Thực đơn</string>
    <string name="title_feeling_brand">Cảm nhận từ khách hàng</string>
    <string name="ultility_restaurant">Các tiện ích</string>
    <string name="order_management">Quản lý Đơn hàng</string>
    <string name="subscribe_to_ads">Đăng ký Quảng cáo</string>
    <string name="title_share">Bạn có cần tiêu đề cho chia sẻ của mình?</string>
    <string name="share_you">Chia sẻ của bạn là gì nhỉ?</string>
    <string name="review_restaurant">Cảm nhận của bạn về nhà hàng nào?</string>
    <string name="title_setting_login">Bạn có thể lựa chọn đăng nhập bằng mật khẩu, vân tay hoặc Face ID</string>
    <string name="optional_with_fingerprint">Tùy chọn với vân tay</string>
    <string name="optional_with_face_id">Tùy chọn với Face ID</string>
    <string name="sign_in_with_fingerprint">Đăng nhập bằng Vân tay</string>
    <string name="title_sign_in_with_fingerprint">Sử dụng vân tay của bạn thay cho mật khẩu đăng nhập</string>
    <string name="verify_transactions_by_fingerprint">Xác thực giao dịch bằng Vân tay</string>
    <string name="title_verify_transactions_by_fingerprint">Sử dụng vân tay để xác nhận tất cả giao dịch trên aloLINE</string>
    <string name="sign_in_with_face_id">Đăng nhập bằng Face ID</string>
    <string name="title_sign_in_with_face_id">Sử dụng Face ID của bạn thay cho mật khẩu đăng nhập</string>
    <string name="authenticate_transactions_with_face_id">Xác thực giao dịch bằng Face ID</string>
    <string name="title_authenticate_transactions_with_face_id">Sử dụng Face ID để xác nhận tất cả giao dịch trên aloLINE</string>
    <string name="review_order_service" translatable="false">Dịch vụ</string>
    <string name="review_order_food" translatable="false">Món ăn</string>
    <string name="review_order_price" translatable="false">Giá cả</string>
    <string name="review_order_room" translatable="false">Không gian</string>
    <string name="review_order_toilet" translatable="false">Vệ sinh</string>
    <string name="bad" translatable="false">Tệ</string>
    <string name="least" translatable="false">Kém</string>
    <string name="okay" translatable="false">Tạm</string>
    <string name="rather" translatable="false">Khá</string>
    <string name="great" translatable="false">Tuyệt</string>
    <string name="valid_review_order_service" translatable="false">Vui lòng chọn đánh giá sao dịch vụ trước khi đồng ý</string>
    <string name="valid_review_order_food" translatable="false">Vui lòng chọn đánh giá sao món ăn trước khi đồng ý</string>
    <string name="valid_review_order_price" translatable="false">Vui lòng chọn đánh giá sao giá cả trước khi đồng ý</string>
    <string name="valid_review_order_room" translatable="false">Vui lòng chọn đánh giá sao không gian trước khi đồng ý</string>
    <string name="valid_review_order_toilet" translatable="false">Vui lòng chọn đánh giá sao vệ sinh trước khi đồng ý</string>
    <string name="common_confirm">Xác nhận</string>
    <string name="confirm_account_emergency_lock">Xác nhận khóa khẩn cấp tài khoản</string>
    <string name="hint_confirm">Không thông báo tin nhắn của hộp thoại này</string>
    <string name="confirm_account_emergency_lock_title">LƯU Ý: Chỉ nên vô hiệu hóa mật khuẩu nếu vẫn còn sở hữu số điện thoại đã đăng kí aloLINE</string>
    <string name="content_type_1">Thông tin không chính xác</string>
    <string name="content_feedback_1">Yêu cầu nâng cấp, cải tiến</string>
    <string name="content_type_2">Ngôn từ gây thù ghét</string>
    <string name="content_feedback_2">Góp ý phát triển thêm</string>
    <string name="content_type_3">Nội dung về tình dục hoặc ảnh khoả thân </string>
    <string name="content_feedback_3">Báo lỗi </string>
    <string name="not_found_timeline">Lỗi dữ liệu </string>
    <string name="content_type_4">Bạo lực</string>
    <string name="content_type_5">Thông tin sai sự thật </string>
    <string name="content_type_6">Quấy rối</string>
    <string name="content_type_7">Trang lừa đảo và giả mạo </string>
    <string name="content_type_8">Bán hàng trái phép</string>
    <string name="content_type_9">Quyền sở hữu trí tuệ</string>
    <string name="other">Lý do khác</string>
    <string name="common_cancel">Hủy bỏ</string>
    <string name="title_report" translatable="false">Cảm ơn bạn đã gửi báo cáo</string>
    <string name="title_notify_report" translatable="false">Chúng tôi sẽ xem xét báo cáo và thông báo cho bạn về quyết định của mình</string>
    <string name="common_year">Năm</string>
    <string name="common_month">Tháng</string>
    <string name="common_day">Ngày</string>
    <string name="common_hour">Giờ</string>
    <string name="common_minute">Phút</string>
    <string name="common_second">Giay</string>
    <string name="common_crash_hint">Ứng dụng gặp sự cố nhỏ và đang khởi động lại</string>
    <string name="common_permission_alert">Lời nhắc ủy quyền</string>
    <string name="common_permission_fail_1">Cấp quyền không thành công, vui lòng cấp quyền chính xác</string>
    <string name="common_permission_fail_2">Không xin được quyền, vui lòng cấp quyền theo cách thủ công</string>
    <string name="common_permission_fail_3">Không xin được quyền, vui lòng cấp quyền theo cách thủ công%s</string>
    <string name="common_permission_fail_4">Quyền vị trí nền không được cấp, vui lòng chọn "Luôn cho phép"</string>
    <string name="common_permission_goto">Đi đến ủy quyền</string>
    <string name="common_permission_calendar">Quyền lịch</string>
    <string name="common_permission_camera">Cho phép máy ảnh</string>
    <string name="common_permission_contacts">Quyền liên hệ</string>
    <string name="common_permission_location">Quyền vị trí</string>
    <string name="common_permission_location_background">Quyền vị trí nền</string>
    <string name="common_permission_microphone">Quyền đối với micrô</string>
    <string name="common_permission_phone">Quyền điện thoại</string>
    <string name="common_permission_call_log">Quyền ghi nhật ký cuộc gọi</string>
    <string name="common_permission_sensors">Quyền cảm biến cơ thể</string>
    <string name="common_permission_activity_recognition">Quyền tập thể dục</string>
    <string name="common_permission_sms">Quyền SMS</string>
    <string name="common_permission_storage">Quyền lưu trữ</string>
    <string name="common_permission_install">Cài đặt quyền ứng dụng</string>
    <string name="common_permission_notification">Quyền của thanh thông báo</string>
    <string name="common_permission_window">Quyền đối với cửa sổ nổi</string>
    <string name="common_permission_setting">Quyền thiết lập hệ thống</string>
    <string name="common_no_more_data">Không có thêm dữ liệu</string>
    <string name="common_web_ssl_error_title">Chứng chỉ bảo mật trang web hiện tại đã hết hạn hoặc không đáng tin cậy\nTiếp tục duyệt</string>
    <string name="common_web_ssl_error_allow">Tiếp tục duyệt</string>
    <string name="common_web_ssl_error_reject">Quay lại trang cuối cùng</string>
    <string name="common_web_location_permission_title">Trang web hiện tại cần có vị trí địa lý của bạn</string>
    <string name="common_web_location_permission_allow">Ban cho</string>
    <string name="common_web_location_permission_reject">Từ chối</string>
    <string name="common_web_call_phone_title">Số lượng hiện tại %s</string>
    <string name="common_web_call_phone_allow">Quay số</string>
    <string name="common_web_call_phone_reject">Hủy bỏ</string>
    <string name="http_data_explain_error">Ngoại lệ phân tích cú pháp dữ liệu, vui lòng đợi</string>
    <string name="title_qr_group">Mã QR của bạn</string>
    <string name="description_place_image">A photo of the selected place</string>
    <string name="disable_password_when_locking_this_account" translatable="false">Vô hiệu hóa mật khẩu khi khóa tài khoản này</string>
    <string name="understood_lock_now" translatable="false">Đã hiểu, khóa ngay</string>
    <string name="content_qr_group" translatable="false">Bất kỳ ai có link này đều có thể tham gia nhóm.
Chỉ chia sẻ với người mà bạn tin tưởng.</string>
    <string name="link_group" translatable="false">hitu.edu.vn/u/khjdsfbseu74312</string>
    <string name="copy_link_group" translatable="false">Sao chép Link</string>
    <string name="share_link" translatable="false">Chia sẻ</string>
    <string name="title_no" translatable="false">Không</string>
</resources>