<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/border_gray_4dp"
        android:backgroundTint="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_radius_10"
                android:gravity="center"
                android:orientation="vertical">


                <vn.hitu.ntb.widget.AppTextView
                    android:id="@+id/tvType1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_16"
                    android:text="@string/content_feedback_1"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:background="#ececec" />

                <vn.hitu.ntb.widget.AppTextView
                    android:id="@+id/tvType2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_16"
                    android:text="@string/content_feedback_2"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:background="#ececec" />

                <vn.hitu.ntb.widget.AppTextView
                    android:id="@+id/tvType3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_16"
                    android:text="@string/content_feedback_3"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>