<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_8"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_5"
        tools:context=".ui.dialog.DateDialog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <vn.hitu.ntb.widget.AppTextViewBold
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/common_day"
                android:textColor="@color/main_bg"
                android:textSize="@dimen/sp_16" />

            <vn.hitu.ntb.widget.AppTextViewBold
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/common_month"
                android:textColor="@color/main_bg"
                android:textSize="@dimen/sp_16" />

            <vn.hitu.ntb.widget.AppTextViewBold
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="@string/common_year"
                android:textColor="@color/main_bg"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dayView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:itemCount="3"
                tools:listitem="@layout/picker_item" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/monthView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:itemCount="3"
                tools:listitem="@layout/picker_item" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/yearView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                tools:itemCount="3"
                tools:listitem="@layout/picker_item" />

        </LinearLayout>
    </LinearLayout>


</layout>